[gd_scene format=3 uid="uid://bcjonrq8t3by5"]

[ext_resource type="PackedScene" uid="uid://bnnjyvf6su204" path="res://scenes/player/Player.tscn" id="1_klkup"]
[ext_resource type="Script" uid="uid://1x5x4pyqinvg" path="res://scripts/Game.gd" id="1_m44fu"]
[ext_resource type="PackedScene" uid="uid://do2tr6gyaoagk" path="res://scenes/ui/LevelUpPanel.tscn" id="3_vrspl"]
[ext_resource type="PackedScene" uid="uid://cswoto822dl8e" path="res://scenes/ui/HUD.tscn" id="4_7qcb4"]
[ext_resource type="PackedScene" uid="uid://dejdmkeu64b8f" path="res://scenes/ui/GameOverScreen.tscn" id="5_lyhax"]

[node name="Game" type="Node2D"]
script = ExtResource("1_m44fu")

[node name="RoomContainer" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("1_klkup")]
position = Vector2(576, 324)

[node name="RoomCamera" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="TransitionLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="TransitionRect" type="ColorRect" parent="TransitionLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("4_7qcb4")]
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LevelUpPanel" parent="CanvasLayer" instance=ExtResource("3_vrspl")]
z_index = 4096
offset_top = -1.0
offset_bottom = -1.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameOverScreen" parent="CanvasLayer" instance=ExtResource("5_lyhax")]
process_mode = 3
